--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -1,1 +1,11 @@
-<h1>This is a very simple test component with nothing fancy in it.</h1>>
+<ion-card>
+
+    <h1>{{ databindingh1Text }}</h1>
+    <p>{{ cardText }}</p>
+    <button class="testButton">{{ buttonText }}</button>
+
+    <img class="testImage" src="../../../assets/testimage.png">
+
+    {{HTMLInput}}
+
+</ion-card>
