--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,5 +5,14 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col class="col1" size="6">
+        This is column 1
+      </ion-col>
+      <ion-col class="col2" size="6">
+        and this is column 2
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
