--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,4 +6,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+
+  <a (click)="gotoHome();">Home page</a>
+
+
+  <app-test></app-test>
+
+
+  <sb-test-comp></sb-test-comp>
+</ion-content>
