--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,16 @@
       <ion-icon name="send"></ion-icon>
       <ion-label>Tab Three</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="tab4">
+      <ion-icon name="analytics"></ion-icon>
+      <ion-label>Tab 4!</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab5">
+      <ion-icon name="logo-octocat"></ion-icon>
+      <ion-label>Tab 5 :)</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
